<resources>
    <string name="app_name">Quizer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lifebelts">Lifebelts</string>
    <string name="level">Level</string>
    <string name="cash">Cash:</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="fifty_fifty">Fifty-Fifty</string>
    <string name="ask_audience">Ask audience</string>
    <string name="call">Call</string>
    <string name="your_max_level">Your max level:</string>
    <string name="delete_scores">Delete scores</string>
    <string name="save">Save your score</string>
    <string name="saveShort">Save</string>
    <string name="name">your name</string>

    <string name="TypeYourName">Type your name here</string>
    <string name="goToMainMenu">Go to main menu</string>
    <string name="max_level">Max level</string>
    <string name="scores">Scores</string>
    <string name="audience_results">Audience results</string>
    <string name="i_think_that">I think, that correct answer is: </string>
    <string name="question_for">Question for:  </string>


</resources>
