<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.quizer.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp">

        <Button
            android:background="@drawable/answer_button_gradient"
            android:text="@string/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_new_game_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:background="@drawable/answer_button_gradient"

            android:text="@string/scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_scores_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:background="@drawable/answer_button_gradient"

            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_settings_button" />


    </LinearLayout>
</RelativeLayout>
